# pauser

./: .gitignore  .gitmodules  AGENTS.md  README.md  TODO.md  build.gradle.kts  gradle.properties  gradlew  local.properties.example  settings.gradle.kts
.claude/: settings.local.json
.claude/plans/: a_usable_browse_view.plan.draft.md  a_usable_browse_view.plan.md  a_usable_browse_view.plan.prompt.md  add-a-feature-in-purrfect-biscuit.md  do-a-research-about-synchronous-elephant.md  enhance_exo_buffering_control.plan.md  http_control_skill.md  playerOsdMenuFixes.prompt.md  refactor_backend.plan.md  refactor_backend_js.plan.md
.cursor/plans/: android_tv_emby_player_a1d8e570.plan.md  async_provider_loading_25e04787.plan.md  eliminate_android_deps_for_kmp_a1d8e570.plan.md  eliminate_js_thread_safety_risks_1a84f225.plan.md  enhanced_provider-ts_tests_eda76309.plan.md  exoplayer_tv_ui_customization_8a7ee531.plan.md  info_osd.prompt.md  merge_player_routes_and_logs_c69ab0a8.plan.md  (+8 more)
app/: build.gradle.kts  proguard-rules.pro
app/src/main/jni/: CMakeLists.txt  quickjs_engine.c
device-profile/: build.gradle.kts
docs/: ENVIRONMENT_SETUP.md  audio_bug.md  js-provider-thread-safety.research.md  plugin.options.research.md
emby-api/: build.gradle.kts
gradle/: libs.versions.toml
playback-api/: build.gradle.kts
player/: build.gradle.kts
provider-api/: build.gradle.kts
provider-js/: build.gradle.kts
providers-ts/: package-lock.json  package.json  rollup-plugin-quickjs-compat.js  rollup.config.js  tsconfig.json
smb/: build.gradle.kts
storage/: build.gradle.kts
(+252 files in other folders)
